--- a/src/components/MyLearning/MLheader.css
+++ b/src/components/MyLearning/MLheader.css
@@ -3,3 +3,8 @@
     background-size: cover;
     height: 200px;
 }
+
+.Certificate-right{
+    margin-top: 0 !important;
+    column-width: 20px;
+}
